--- a/src/db/projects.json
+++ b/src/db/projects.json
@@ -10,5 +10,17 @@
     "desc": "lorem ipsum dolor sit amet how to be",
     "thumbnail": "assets/projects/react-calc/preview.jpeg",
     "tag": ["react","tailwindcss"]
+  },
+  {
+    "title": "React Kalkulator",
+    "desc": "lorem ipsum dolor sit amet how to be",
+    "thumbnail": "assets/projects/react-calc/preview.jpeg",
+    "tag": ["react","tailwindcss"]
+  },
+  {
+    "title": "React Kalkulator",
+    "desc": "lorem ipsum dolor sit amet how to be",
+    "thumbnail": "assets/projects/react-calc/preview.jpeg",
+    "tag": ["react","tailwindcss"]
   }
 ]
